add latest devolpment on sync with ETH

--- a/CfgMerge/mergeData2012.ini
+++ b/CfgMerge/mergeData2012.ini
@@ -2,7 +2,7 @@
 tasks = cutsV22Dilepton
 basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer11
-outPath = processedTrees_Full2012_v3
+outPath = processedTrees_Blinded
 counterSum = True
 
 [dileptonTree:cutsV22Dilepton]
