--- a/CfgMerge/mergeTriggerSimulation.ini
+++ b/CfgMerge/mergeTriggerSimulation.ini
@@ -1,13 +1,14 @@
 [general]
 tasks = cutsV22DileptonTrigger
-basePath = /user/jschulte/CleaningMC4
+basePath = /user/jschulte/CleaningMC/
 MCDatasets = .*_Summer12
 counterSum = True
-outPath = processedTrees_Simulation
 
 [dileptonTree:cutsV22Dilepton]
 treeProducerName = FinalTrees
+objects = EE EMu MuMu
 EEDataset = .*
 EMuDataset = .*
 MuMuDataset = .*
+
 OtherSelection = 
