--- a/Input/Master53X.ini
+++ b/Input/Master53X.ini
@@ -745,7 +745,7 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJets Madgraph Summer12
-crosssection = 22.1
+crosssection = 23.646 
 datasetpath =  /TTJets_FullLeptMGDecays_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7C-v2/AODSIM
 localdbspath =  /TTJets_FullLeptMGDecays_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7C-v2/AODSIM
 
@@ -763,6 +763,11 @@ localdbspath =
 
 [SyncElectron]
 groups = SyncElectron
+datasetpath = 
+localdbspath =
+
+[SyncMuEG]
+groups = SyncMuEG
 datasetpath = 
 localdbspath =
 
@@ -988,20 +993,6 @@ groups = MC CMSSW53X at8TeV PL1V1203c Aachen TT Dileptonic Powheg Summer12 v1
 crosssection = 225.2
 datasetpath = /TTTo2L2Nu2B_8TeV-powheg-pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 localdbspath = /TTTo2L2Nu2B_8TeV-powheg-pythia6/jschulte-TT_Dileptonic_Powheg_Summer12_v1_SUSYAC_V1203cv7-8f0a0a0903c9e9e754dfc5fab35ef171/USER
-
-[WbbJetsToLNu_Madgraph_Summer12]
-status = CREATED
-numevents = 0
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW53X at8TeV PL1V1203c Aachen Wbb  Madgraph Summer12
-crosssection = -1
-datasetpath = /WbbJetsToLNu_Massive_TuneZ2star_8TeV-madgraph-pythia6_tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
-localdbspath = /WbbJetsToLNu_Massive_TuneZ2star_8TeV-madgraph-pythia6_tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
-
-
-
-
 #---- SUSY Signal
 [SUSY_CMSSM_5250_374_Summer12]
 status = CREATED
