--- a/CfgMerge/mergeData2012.ini
+++ b/CfgMerge/mergeData2012.ini
@@ -2,7 +2,7 @@
 tasks = cutsV22Dilepton
 basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer11
-outPath = processedTrees_Blinded
+outPath = processedTrees_Unblinded
 counterSum = True
 
 [dileptonTree:cutsV22Dilepton]
