all the configs for 2013 full reprocessing (V23)

--- a/CfgMerge/mergeData2012Exlcude16JanReReco.ini
+++ b/CfgMerge/mergeData2012Exlcude16JanReReco.ini
@@ -5,7 +5,7 @@ MCDatasets = .*_Summer11
 outPath = processedTrees_Unblinded
 counterSum = True
 
-[dileptonTree:cutsV23Dilepton]
+[dileptonTree:cutsV22Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
@@ -29,16 +29,16 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelectorOS]
 type = SimpleSelector
-EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
-EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
-MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
+EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207833 || runNr > 208307)
+EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207833 || runNr > 208307)
+MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207833 || runNr > 208307)
 
 
 [treeProcessor:highPtSelectorSS]
 type = SimpleSelector
-EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
-EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
-MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
+EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207833 || runNr > 208307)
+EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207833 || runNr > 208307)
+MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207833 || runNr > 208307)
 
 
 [treeProcessor:overlapHighPt]
