--- a/CfgMerge/mergeData2012Relaxed.ini
+++ b/CfgMerge/mergeData2012Relaxed.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV23Dilepton
-basePath = /user/jschulte/Cleaning16Jan
+tasks = cutsV22Dilepton
+basePath = /user/jschulte/CleaningRelaxed
 MCDatasets = .*_Summer11
-outPath = processedTrees_Unblinded
+outPath = processedTreesRelaxed2
 counterSum = True
 
-[dileptonTree:cutsV23Dilepton]
+[dileptonTree:cutsV22Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
