--- a/CfgMerge/mergeData2012Vector.ini
+++ b/CfgMerge/mergeData2012Vector.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV23Dilepton
-basePath = /user/jschulte/Cleaning16Jan
+tasks = cutsV22Dilepton
+basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer11
-outPath = processedTrees_Unblinded
+outPath = processedTrees_withoutReReco0p5fbi
 counterSum = True
 
-[dileptonTree:cutsV23Dilepton]
+[dileptonTree:cutsV22Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
@@ -29,16 +29,16 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelectorOS]
 type = SimpleSelector
-EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
-EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
-MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
+EEExpression = (lepton1.Pt() > 20 && lepton2.Pt() > 10 || lepton1.Pt() > 10 && lepton2.Pt() > 20) && chargeProduct==-1
+EMuExpression = (lepton1.Pt() > 20 && lepton2.Pt() > 10 || lepton1.Pt() > 10 && lepton2.Pt() > 20) && chargeProduct==-1
+MuMuExpression = (lepton1.Pt() > 20 && lepton2.Pt() > 10 || lepton1.Pt() > 10 && lepton2.Pt() > 20) && chargeProduct==-1
 
 
 [treeProcessor:highPtSelectorSS]
 type = SimpleSelector
-EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
-EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
-MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
+EEExpression = (lepton1.Pt() > 20 && lepton2.Pt() > 10 || lepton1.Pt() > 10 && lepton2.Pt() > 20) && chargeProduct==1
+EMuExpression = (lepton1.Pt() > 20 && lepton2.Pt() > 10 || lepton1.Pt() > 10 && lepton2.Pt() > 20) && chargeProduct==1
+MuMuExpression = (lepton1.Pt() > 20 && lepton2.Pt() > 10 || lepton1.Pt() > 10 && lepton2.Pt() > 20) && chargeProduct==1
 
 
 [treeProcessor:overlapHighPt]
