--- a/CfgMerge/mergeHT.ini
+++ b/CfgMerge/mergeHT.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV22DileptonTrigger
-basePath = /user/jschulte/CleaningMC4/
+tasks = cutsV23DileptonTriggerHT
+basePath = /user/jschulte/CleaningHT/
 MCDatasets = .*_Summer12
 counterSum = True
-outPath = processedTrees_Simulation
 
-[dileptonTree:cutsV22Dilepton]
+
+[dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
 EEDataset = .*
 EMuDataset = .*
