--- a/CfgMerge/mergeSimulation2013.ini
+++ b/CfgMerge/mergeSimulation2013.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV22DileptonTrigger
-basePath = /user/jschulte/CleaningMC4/
+tasks = cutsV23DileptonTriggerEfficiency
+basePath = /user/jschulte/CleaningMC3/
 MCDatasets = .*_Summer12
 counterSum = True
 outPath = processedTrees_Simulation
 
-[dileptonTree:cutsV22Dilepton]
+[dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
 EEDataset = .*
 EMuDataset = .*
