--- a/Input/default53X_OntheFlyMC.ini
+++ b/Input/default53X_OntheFlyMC.ini
@@ -1,6 +1,6 @@
 [general]
 
-additionalProducers = SUSYPATdata rho2011Producer EventCountProducer
+additionalProducers = SUSYPATmc rho2011Producer EventCountProducer
 
 [crab]
 CMSSW.total_number_of_lumis = -1
@@ -10,4 +10,5 @@ nEventsPerJob = 50000
 [53X]
 
 dbsurl = http://cmsdbsprod.cern.ch/cms_dbs_prod_global/servlet/DBSServlet
-globalTag =  GR_P_V40_AN1::All
+globalTag = START53_V7A::All
+master_list = <general|InputPath>/Master53XOnTheFly.ini
