--- a/CfgMerge/mergeData2013ReReco.ini
+++ b/CfgMerge/mergeData2013ReReco.ini
@@ -1,12 +1,12 @@
 [general]
 tasks = cutsV23Dilepton
-basePath = /user/jschulte/Cleaning16Jan
+basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer11
-outPath = processedTrees_Unblinded
+outPath = processedTrees_ReReco
 counterSum = True
 
 [dileptonTree:cutsV23Dilepton]
-treeProducerName = FinalTrees
+treeProducerName = FinalTriggerTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
 EESelection = 
