--- a/CfgMerge/mergeDataSingleLepton2012.ini
+++ b/CfgMerge/mergeDataSingleLepton2012.ini
@@ -1,24 +1,24 @@
 [general]
-tasks = cutsV23Dilepton
-basePath = /user/jschulte/Cleaning16Jan
+tasks = cutsV22Dilepton
+basePath = /user/jschulte/CleaningSingleLepton
 MCDatasets = .*_Summer11
-outPath = processedTrees_Unblinded
+outPath = processedTrees
 counterSum = True
 
-[dileptonTree:cutsV23Dilepton]
-treeProducerName = FinalTrees
+[dileptonTree:cutsV22Dilepton]
+treeProducerName = FinalTriggerTrees
 objects = EE EMu MuMu
-EEDataset = .*DoubleElectron*
+EEDataset = .*SingleElectron*
 EESelection = 
 EEProcessors = overlapHighPt highPtSelectorSS
 EEFilter = overlapHighPt or highPtSelectorSS
 
-EMuDataset = .*MuEG*
+EMuDataset = .*Single*
 EMuSelection = 
 EMuProcessors = overlapHighPt highPtSelectorSS
 EMuFilter = overlapHighPt or highPtSelectorSS
 
-MuMuDataset = .*DoubleMu*
+MuMuDataset = .*SingleMu*
 MuMuSelection = 
 MuMuProcessors = overlapHighPt highPtSelectorSS
 MuMuFilter = overlapHighPt or highPtSelectorSS
@@ -29,16 +29,16 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelectorOS]
 type = SimpleSelector
-EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
-EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
-MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1
+EEExpression = (pt1 > 30 && pt2 > 10 || pt1 > 10 && pt2 > 30) && chargeProduct==-1
+EMuExpression = (pt1 > 30 && pt2 > 10 || pt1 > 10 && pt2 > 30) && chargeProduct==-1
+MuMuExpression = (pt1 > 30 && pt2 > 10 || pt1 > 10 && pt2 > 30) && chargeProduct==-1
 
 
 [treeProcessor:highPtSelectorSS]
 type = SimpleSelector
-EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
-EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
-MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1
+EEExpression = (pt1 > 30 && pt2 > 10 || pt1 > 10 && pt2 > 30) && chargeProduct==1
+EMuExpression = (pt1 > 30 && pt2 > 10 || pt1 > 10 && pt2 > 30) && chargeProduct==1
+MuMuExpression = (pt1 > 30 && pt2 > 10 || pt1 > 10 && pt2 > 30) && chargeProduct==1
 
 
 [treeProcessor:overlapHighPt]
