--- a/Input/default53X.ini
+++ b/Input/default53X.ini
@@ -41,8 +41,8 @@ groups = StandardModel SUSY
        Prompt RelVal TuneZ2 MuEnriched Fake Active RelValTTbar Promptv2
        SD JetMETTau EG Mu JPsi Ele15 V1 v1 v2
        SingleElectron DoubleElectron SingleMu DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
-       Sep17th re424 re427 re428 Nov4 May10 Aug05 Aug24 Sep05
-       Run2010A Run2010B Run2011A Run2011B Part2 Part3 Part4 V6 LumiRecovery Jul13 ReReco ECALRecovery Aug06
+       Sep17th re424 re427 re428 Nov4 May10 Aug05 Aug24 Sep05 Jan22
+       Run2010A Run2010B Run2011A Run2011B Part2 Part3 Part4 V6 LumiRecovery Jul13 ReReco ECALRecovery Aug06 Dec11 Jan16
        Run2012A Run2012B Run2012C Run2012D Promptv1 
        Data MC AOD
        SyncElectron SyncMuon SyncMuEG
@@ -58,7 +58,7 @@ CMSSW.lumis_per_job = 200
 # all (merged)
 
 # first json
-CMSSW.lumi_mask = 
+
 #CMSSW.lumi_mask =/home/home4/institut_1b/jschulte/Doktorarbeit/Dilepton/SubmitScripts/Input/Cert_190456-208686_8TeV_PromptReco_Collisions12_JSON_Full2012.txt
 
 #CMSSW.lumi_mask = /home/home4/institut_1b/jschulte/Doktorarbeit/Dilepton/SubmitScripts/Input/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
@@ -91,7 +91,7 @@ GRID.additional_jdl_parameters=rank=-other.GlueCEStateEstimatedResponseTime+(Reg
 [53X]
 monteCarloAvailable = True
 localdatapath = /user/$USER/52X/
-globalTag = 
+globalTag =  GR_P_V40_AN1::All
 skimcfgname = templates/53Data/SusyPAT_dataJul13ReReco_cfg.py
 skimFromLocalDBS = False
 logname = skimming_
