--- a/Input/default53X_OntheFlyReReco.ini
+++ b/Input/default53X_OntheFlyReReco.ini
@@ -4,10 +4,12 @@ additionalProducers = SUSYPATdata rho2011Producer EventCountProducer
 
 [crab]
 CMSSW.total_number_of_lumis = -1
-CMSSW.lumis_per_job = 25
+CMSSW.lumis_per_job = 20
 nEventsPerJob = 50000
+
+CMSSW.lumi_mask =/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions12/8TeV/Reprocessing/Cert_190456-208686_8TeV_22Jan2013ReReco_Collisions12_JSON.txt 
 
 [53X]
 
 dbsurl = http://cmsdbsprod.cern.ch/cms_dbs_prod_global/servlet/DBSServlet
-globalTag =  GR_P_V40_AN1::All
+globalTag =  FT53_V21A_AN6::All
