--- a/Input/default53X_OntheFlySummer12MC.ini
+++ b/Input/default53X_OntheFlySummer12MC.ini
@@ -1,13 +1,15 @@
 [general]
 
-additionalProducers = SUSYPATdata rho2011Producer EventCountProducer
+additionalProducers = SUSYPATmc rho2011Producer EventCountProducer
 
 [crab]
 CMSSW.total_number_of_lumis = -1
-CMSSW.lumis_per_job = 25
+CMSSW.lumis_per_job = 20
 nEventsPerJob = 50000
+
+
 
 [53X]
 
 dbsurl = http://cmsdbsprod.cern.ch/cms_dbs_prod_global/servlet/DBSServlet
-globalTag =  GR_P_V40_AN1::All
+globalTag =  START53_V19PR::All
