final configs for 2012 Prompt Data

--- a/Input/Master53XOnTheFly.ini
+++ b/Input/Master53XOnTheFly.ini
@@ -29,15 +29,6 @@ crosssection =
 datasetpath = /DoubleElectron/Run2012B-13Jul2012-v1/AOD
 localdbspath = /DoubleElectron/Run2012B-13Jul2012-v1/AOD
 
-[DoubleElectron_Run2012B_13Jul2012_p2]
-status = CREATED
-numevents = 23474509
-kfactor = 1.
-localevents = 23457551
-groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleElectron Run2012B ReReco Jul13 Part2
-crosssection = 
-datasetpath = /DoubleElectron/Run2012B-13Jul2012-v1/AOD
-localdbspath = /DoubleElectron/Run2012B-13Jul2012-v1/AOD
 
 
 [DoubleElectron_Run2012C_11Dec2012]
@@ -123,15 +114,6 @@ crosssection =
 datasetpath = /DoubleMu/Run2012B-13Jul2012-v4/AOD
 localdbspath = /DoubleMu/Run2012B-13Jul2012-v4/AO
 
-[DoubleMu_Run2012B_13Jul2012_p2]
-status = CREATED
-numevents = 15127284
-kfactor = 1.
-localevents = 15105024
-groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleMu Run2012B ReReco Jul13 Part2
-crosssection = 
-datasetpath = /DoubleMu/Run2012B-13Jul2012-v4/AOD
-localdbspath = /DoubleMu/Run2012B-13Jul2012-v4/AOD
 
 
 [DoubleMu_Run2012C_24Aug]
@@ -182,8 +164,8 @@ kfactor = 1.
 localevents = 
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleMu Run2012D Jan16
 crosssection = 
-datasetpath = /DoubleMu/Run2012D-16Jan2013-v1/AOD
-localdbspath = /DoubleMu/Run2012D-16Jan2013-v1/AOD
+datasetpath = /DoubleMu/Run2012D-16Jan2013-v2/AOD
+localdbspath = /DoubleMu/Run2012D-16Jan2013-v2/AOD
 
 [MuEG_Run2012A_13Jul2012]
 status = CREATED
@@ -215,15 +197,6 @@ crosssection =
 datasetpath = /MuEG/Run2012B-13Jul2012-v1/AOD
 localdbspath = /MuEG/Run2012B-13Jul2012-v1/AOD
 
-[MuEG_Run2012B_13Jul2012_p2]
-status = CREATED
-numevents = 14774342
-kfactor = 1.
-localevents = 14774335
-groups = Data CMSSW53X at8TeV PL1V1203c Aachen MuEG Run2012B ReReco Jul13 Part2
-crosssection = 
-datasetpath = /MuEG/Run2012B-13Jul2012-v1/AOD
-localdbspath = /MuEG/Run2012B-13Jul2012-v1/AOD
 
 
 
@@ -275,8 +248,8 @@ kfactor = 1.
 localevents = 
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen MuEG Run2012D Jan16
 crosssection = 
-datasetpath = /MuEG/Run2012D-16Jan2013-v1/AOD
-localdbspath = /MuEG/Run2012D-16Jan2013-v1/AOD
+datasetpath = /MuEG/Run2012D-16Jan2013-v2/AOD
+localdbspath = /MuEG/Run2012D-16Jan2013-v2/AOD
 
 
 
@@ -310,15 +283,7 @@ crosssection =
 datasetpath = /MET/Run2012B-13Jul2012-v1/AOD
 localdbspath = /MET/Run2012B-13Jul2012-v1/AOD
 
-[MET_Run2012B_13Jul2012_p2]
-status = CREATED
-numevents = 18348383
-kfactor = 1.
-localevents = 17727498
-groups = Data CMSSW53X at8TeV PL1V1203c Aachen MET Run2012B ReReco Jul13 Part2
-crosssection = 
-datasetpath = /MET/Run2012B-13Jul2012-v1/AOD
-localdbspath = /MET/Run2012B-13Jul2012-v1/AOD
+
 
 
 
@@ -407,15 +372,7 @@ crosssection =
 datasetpath = /JetHT/Run2012B-13Jul2012-v1/AOD
 localdbspath = /JetHT/Run2012B-13Jul2012-v1/AOD
 
-[HT_Run2012B_13Jul_p2]
-status = CREATED
-numevents = 0
-kfactor = 1.
-localevents = 0
-groups = Data CMSSW53X at8TeV PL1V1203c Aachen HT Run2012B Jul13 Part2
-crosssection = 
-datasetpath = /JetHT/Run2012B-13Jul2012-v1/AOD
-localdbspath = /JetHT/Run2012B-13Jul2012-v1/AOD
+
 
 
 [HT_Run2012C_Aug24]
@@ -493,15 +450,6 @@ crosssection =
 datasetpath = /HTMHT/Run2012B-13Jul2012-v1/AOD
 localdbspath = /HTMHT/Run2012B-13Jul2012-v1/AOD
 
-[HTMHT_Run2012B_13Jul_p2]
-status = CREATED
-numevents = 0
-kfactor = 1.
-localevents = 0
-groups = Data CMSSW53X at8TeV PL1V1203c Aachen HTMHT Run2012B Jul13 Part2
-crosssection = 
-datasetpath = /HTMHT/Run2012B-13Jul2012-v1/AOD
-localdbspath = /HTMHT/Run2012B-13Jul2012-v1/AOD
 
 [HTMHT_Run2012C_Aug24]
 status = CREATED
@@ -622,8 +570,8 @@ kfactor = 1.
 localevents = 0
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen SingleMu Run2012D Jan16
 crosssection = 
-datasetpath = /SingleMu/Run2012D-16Jan2013-v1/AOD
-localdbspath = /SingleMu/Run2012D-16Jan2013-v1/AOD
+datasetpath = /SingleMu/Run2012D-16Jan2013-v2/AOD
+localdbspath = /SingleMu/Run2012D-16Jan2013-v2/AOD
 
 #Single Electron
 [SingleElectron_Run2012A_13Jul]
@@ -704,8 +652,8 @@ kfactor = 1.
 localevents = 0
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen SingleElectron Run2012D Jan16
 crosssection = 
-datasetpath = /SingleElectron/Run2012D-16Jan2013-v1/AOD
-localdbspath =  /SingleElectron/Run2012D-16Jan2013-v1/AOD
+datasetpath = /SingleElectron/Run2012D-16Jan2013-v2/AOD
+localdbspath =  /SingleElectron/Run2012D-16Jan2013-v2/AOD
 
 #---- 2011 Data
 [DoubleElectron_Run2011A_05Sep2012]
@@ -1043,6 +991,12 @@ localdbspath = /WJetsToLNu_TuneZ2Star_8TeV-madgraph-tarball/Summer12_DR53X-PU_S1
 groups = RelVal
 datasetpath = 
 localdbspath =
+
+[TTBarMCAOD]
+groups = 
+datasetpath = 
+localdbspath =
+
 
 [SyncMuon]
 groups = SyncMuon
