add configs to run on 62X samples

--- a/Input/default53X_OntheFlyJan22ReReco.ini
+++ b/Input/default53X_OntheFlyJan22ReReco.ini
@@ -13,3 +13,4 @@ CMSSW.lumi_mask =/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions1
 
 dbsurl = http://cmsdbsprod.cern.ch/cms_dbs_prod_global/servlet/DBSServlet
 globalTag =  FT53_V21A_AN6::All
+master_list = <general|InputPath>/Master53XOnTheFly.ini
