--- a/Input/Master53XOnTheFly.ini
+++ b/Input/Master53XOnTheFly.ini
@@ -732,7 +732,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleElectron Run2012A ReReco Jan22
 crosssection = 
 datasetpath = /DoubleElectron/Run2012A-22Jan2013-v1/AOD
-localdbspath = 
+localdbspath = /DoubleElectron/Run2012A-22Jan2013-v1/AOD
 
 [DoubleElectron_Run2012B_22Jan2013]
 status = CREATED
@@ -742,7 +742,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleElectron Run2012B ReReco Jan22 
 crosssection = 
 datasetpath = /DoubleElectron/Run2012B-22Jan2013-v1/AOD
-localdbspath =  
+localdbspath = /DoubleElectron/Run2012B-22Jan2013-v1/AOD 
 
 
 [DoubleElectron_Run2012C_22Jan2013]
@@ -765,7 +765,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleElectron Run2012D ReReco Jan22
 crosssection = 
 datasetpath = /DoubleElectron/Run2012D-22Jan2013-v1/AOD
-localdbspath = 
+localdbspath = /DoubleElectron/Run2012D-22Jan2013-v1/AOD
 
 
 [DoubleMu_Run2012A_22Jan2013]
@@ -776,7 +776,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleMu Run2012A ReReco Jan22
 crosssection = 
 datasetpath = /DoubleMu/Run2012A-22Jan2013-v1/AOD
-localdbspath = 
+localdbspath = /DoubleMu/Run2012A-22Jan2013-v1/AOD
 
 [DoubleMu_Run2012B_22Jan2013]
 status = CREATED
@@ -786,7 +786,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleMu Run2012B ReReco Jan22 
 crosssection = 
 datasetpath = /DoubleMuParked/Run2012B-22Jan2013-v1/AOD
-localdbspath =  
+localdbspath =  /DoubleMuParked/Run2012B-22Jan2013-v1/AOD
 
 
 [DoubleMu_Run2012C_22Jan2013]
@@ -809,7 +809,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen DoubleMu Run2012D ReReco Jan22
 crosssection = 
 datasetpath = /DoubleMuParked/Run2012D-22Jan2013-v1/AOD
-localdbspath = 
+localdbspath = /DoubleMuParked/Run2012D-22Jan2013-v1/AOD
 
 
 [MuEG_Run2012A_22Jan2013]
@@ -820,7 +820,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen MuEG Run2012A ReReco Jan22
 crosssection = 
 datasetpath = /MuEG/Run2012A-22Jan2013-v1/AOD
-localdbspath = 
+localdbspath = /MuEG/Run2012A-22Jan2013-v1/AOD
 
 [MuEG_Run2012B_22Jan2013]
 status = CREATED
@@ -830,7 +830,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen MuEG Run2012B ReReco Jan22 
 crosssection = 
 datasetpath = /MuEG/Run2012B-22Jan2013-v1/AOD
-localdbspath =  
+localdbspath =  /MuEG/Run2012B-22Jan2013-v1/AOD
 
 
 [MuEG_Run2012C_22Jan2013]
@@ -853,7 +853,7 @@ localevents = -1
 groups = Data CMSSW53X at8TeV PL1V1203c Aachen MuEG Run2012D ReReco Jan22
 crosssection = 
 datasetpath = /MuEG/Run2012D-22Jan2013-v1/AOD
-localdbspath = 
+localdbspath = /MuEG/Run2012D-22Jan2013-v1/AOD
 #---- Summer12 MC
 
 [ZJets_madgraph_Summer12]
