--- a/Input/default62X_OntheFly.ini
+++ b/Input/default62X_OntheFly.ini
@@ -7,6 +7,7 @@ CMSSW.total_number_of_lumis = -1
 CMSSW.lumis_per_job = 25
 nEventsPerJob = 50000
 
-[53X]
+[62X]
 
 globalTag =  POSTLS162_V2::All
+master_list = <general|InputPath>/Master62X.ini
