modified resubmitter.py to actually do stuff

--- a/Input/default53X_OntheFlyMC.ini
+++ b/Input/default53X_OntheFlyMC.ini
@@ -10,5 +10,5 @@ nEventsPerJob = 50000
 [53X]
 
 dbsurl = http://cmsdbsprod.cern.ch/cms_dbs_prod_global/servlet/DBSServlet
-globalTag = START53_V7A::All
+globalTag = START53_V19PR::All
 master_list = <general|InputPath>/Master53XOnTheFly.ini
