switch downloader to lcg-get

--- a/Input/Master53X.ini
+++ b/Input/Master53X.ini
@@ -1249,6 +1249,17 @@ crosssection = 2.63
 datasetpath = /SUGRA_4500_188_20_m3000_1_8TeV_GEN_FASTSIM_HLT_PU_v1/auterman-SUGRA_4500_188_20_m3000_1_8TeV_GEN_FASTSIM_HLT_PU_v1-7f1b2a7384645c1cee08ec8cd485c3b1/USER 
 localdbspath = /SUGRA_4500_188_20_m3000_1_8TeV_GEN_FASTSIM_HLT_PU_v1/jschulte-SUSY_CMSSM_4500_188_Summer12_SUSYAC_V1203cv6-b5fdb266bd5b94fc0a23ccec0e8d9cb3/USER
 
+[SUSY_SimplifiedModel_mb400_mn2160_Summer12]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
+
 #---- Test
 [Data_Run2012A]
 status = CREATED
