--- a/Input/Master53XOnTheFly.ini
+++ b/Input/Master53XOnTheFly.ini
@@ -1225,8 +1225,69 @@ datasetpath = /TTTo2L2Nu2B_8TeV-powheg-pythia6/Summer12_DR53X-PU_S10_START53_V7A
 localdbspath = /TTTo2L2Nu2B_8TeV-powheg-pythia6/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 #---- SUSY Signal
 
+[SUSY_SimplifiedModel_mb400_mn2160_Summer12]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
 
 
+[TTJets_MGDecays_Dileptonic_FastSim_part1]
+dbs_url = phys03
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TT Dileptonic Summer12 FastSim
+crosssection = 22.4
+datasetpath = /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+localdbspath = /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+
+[TTJets_MGDecays_Dileptonic_FastSim_part2]
+dbs_url = phys03
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TT Dileptonic Summer12 FastSim
+crosssection = 22.4
+datasetpath =  /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_2/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_2-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+localdbspath =  /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_2/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_2-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+[TTJets_MGDecays_Dileptonic_FastSim_part3]
+dbs_url = phys03
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TT Dileptonic Summer12 FastSim
+crosssection = 22.4
+datasetpath = /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_3/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_3-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+localdbspath = /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_3/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_3-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+[TTJets_MGDecays_Dileptonic_FastSim_part4]
+dbs_url = phys03
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TT Dileptonic Summer12 FastSim
+crosssection = 22.4
+datasetpath =  /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_4/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_4-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+localdbspath =  /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_4/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_4-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+[TTJets_MGDecays_Dileptonic_FastSim_part5]
+dbs_url = phys03
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TT Dileptonic Summer12 FastSim
+crosssection = 22.4
+datasetpath = /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_5/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_5-ee9265fb9e95f76aa7b11c6b60d74f35/USER
+localdbspath = /TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_5/cschomak-TTJets_Dileptonic_Madgraph_FastSim_8TeV_officialLHEs_5-ee9265fb9e95f76aa7b11c6b60d74f35/USER
 
 #---- Test
 [Data_Run2012A]
