--- a/Input/default53X_OntheFlyMC.ini
+++ b/Input/default53X_OntheFlyMC.ini
@@ -1,6 +1,6 @@
 [general]
 
-additionalProducers = SUSYPATmc rho2011Producer EventCountProducer
+additionalProducers = SUSYPATmc PdfWeights rho2011Producer EventCountProducer
 
 [crab]
 CMSSW.total_number_of_lumis = -1
