--- a/CfgMerge/mergeData2012.ini
+++ b/CfgMerge/mergeData2012.ini
@@ -1,6 +1,6 @@
 [general]
 tasks = cutsV23Dilepton
-basePath = /user/jschulte/Cleaning16Jan
+basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer11
 outPath = processedTrees_Unblinded
 counterSum = True
