stuff do run uncertainty trees

--- a/CfgMerge/mergeSimulationBaseTrees.ini
+++ b/CfgMerge/mergeSimulationBaseTrees.ini
@@ -1,12 +1,12 @@
 [general]
-tasks = cutsV23DileptonTriggerEfficiency
+tasks = cutsV23DileptonTrigger
 basePath = /user/jschulte/CleaningMC4/
-MCDatasets = .*_Summer12
+MCDatasets = .*_Fall13
 counterSum = True
 outPath = processedTrees_Simulation
 
 [dileptonTree:cutsV23Dilepton]
-treeProducerName = FinalTrees
+treeProducerName = BaseTrees
 EEDataset = .*
 EMuDataset = .*
 MuMuDataset = .*
