--- a/CfgMerge/mergeData2013.ini
+++ b/CfgMerge/mergeData2013.ini
@@ -2,7 +2,7 @@
 tasks = cutsV23Dilepton
 basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer11
-outPath = processedTrees_ReReco
+outPath = processedTrees_BlockA
 counterSum = True
 
 [dileptonTree:cutsV23Dilepton]
