--- a/CfgMerge/mergeSimulation2013Trigger.ini
+++ b/CfgMerge/mergeSimulation2013Trigger.ini
@@ -1,13 +1,16 @@
 [general]
 tasks = cutsV23DileptonTriggerEfficiency
-basePath = /user/jschulte/CleaningMC4/
+basePath = /user/jschulte/CleaningMC3
 MCDatasets = .*_Summer12
 counterSum = True
-outPath = processedTrees_Simulation
+outPath = processedTrees_Trigger
 
 [dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
 EEDataset = .*
 EMuDataset = .*
 MuMuDataset = .*
+EESelection = HLTDiEle
+EMuSelection = HLTMuEG
+MuMuSelection = HLTDiMu
 OtherSelection = 
