--- a/Input/Master53X.ini
+++ b/Input/Master53X.ini
@@ -1260,6 +1260,151 @@ crosssection = 0.368
 datasetpath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
 localdbspath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
 
+
+[SUSY_SimplifiedModel_BR50_mb_400_mn2_160_mn1_90_Summer12_FastSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FastSim
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_90_m_b_400_m_n_2_160_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
+
+
+[SUSY_SimplifiedModel_BR10_mb_350_mn2_250_mn1_200_Summer12_FullSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FullSim
+crosssection = 36.8
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+
+[SUSY_SimplifiedModel_BR10_mb_350_mn2_250_mn1_200_Summer12_FastSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FastSim
+crosssection = 0.368
+datasetpath = /SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan/cschomak-SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+localdbspath = /SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan/cschomak-SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+
+[SUSY_SimplifiedModel_BR10_mb_400_mn2_380_mn1_200_Summer12_FullSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FullSim
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_400_m_n_2_380_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_400_m_n_2_380_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_400_m_n_2_380_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_400_m_n_2_380_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+
+[SUSY_SimplifiedModel_BR10_mb_400_mn2_380_mn1_200_Summer12_FastSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FastSim
+crosssection = 0.368
+datasetpath = /SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_400_m_n_2_380_8TeV_Scan/cschomak-SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_400_m_n_2_380_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+localdbspath = /SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_400_m_n_2_380_8TeV_Scan/cschomak-SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_400_m_n_2_380_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+
+[SUSY_SimplifiedModel_BR10_mb_450_mn2_250_mn1_200_Summer12_FullSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FullSim
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_450_m_n_2_250_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_450_m_n_2_250_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_450_m_n_2_250_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_450_m_n_2_250_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+
+[SUSY_SimplifiedModel_BR10_mb_450_mn2_250_mn1_200_Summer12_FastSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FastSim
+crosssection = 0.368
+datasetpath = /SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_450_m_n_2_250_8TeV_Scan/cschomak-SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_450_m_n_2_250_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+localdbspath = /SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_450_m_n_2_250_8TeV_Scan/cschomak-SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_450_m_n_2_250_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+
+[SUSY_SimplifiedModel_BR10_mb_500_mn2_400_mn1_200_Summer12_FullSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FullSim
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_500_m_n_2_400_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_500_m_n_2_400_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+
+[SUSY_SimplifiedModel_BR10_mb_500_mn2_400_mn1_200_Summer12_FastSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FastSim
+crosssection = 0.368
+datasetpath = /SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_500_m_n_2_400_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+localdbspath = /SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_500_m_n_2_400_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+
+[SUSY_SimplifiedModel_BR50_mb_200_mn2_200_mn1_130_Summer12_FullSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FullSim
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_50_m_n_1_130_m_b_200_m_n_2_200_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_50_m_n_1_130_m_b_200_m_n_2_200_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_50_m_n_1_130_m_b_200_m_n_2_200_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_50_m_n_1_130_m_b_200_m_n_2_200_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+
+[SUSY_SimplifiedModel_BR50_mb_200_mn2_200_mn1_130_Summer12_FastSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FastSim
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_130_m_b_200_m_n_2_200_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_130_m_b_200_m_n_2_200_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_130_m_b_200_m_n_2_200_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_130_m_b_200_m_n_2_200_8TeV_Scan-9a7d9d510d33e33249782689da507872/USER
+
+[SUSY_SimplifiedModel_BR50_mb_200_mn2_200_mn1_130_Summer12_FullSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FullSim
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
+
+[SUSY_SimplifiedModel_BR50_mb_200_mn2_200_mn1_130_Summer12_FastSim]
+dbs_url = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
+status = CREATED
+numevents = 20000 
+kfactor = 1.
+localevents = 20000
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FastSim
+crosssection = 0.368
+datasetpath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
+localdbspath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
+
 #---- Test
 [Data_Run2012A]
 status = CREATED
