--- a/Input/default53X.ini
+++ b/Input/default53X.ini
@@ -23,7 +23,7 @@ groups = StandardModel SUSY
        PL1V1010a PL1V1010b PL1V1013a PL1V1015a PL1V1015b PL1V1200a PL1V1203b PL1V1203c
        342 356 357 360 361 CMSSW362 CMSSW370 CMSSW38X CMSSW382 CMSSW384 CMSSW385
        CMSSW41X CMSSW42X CMSSW52X CMSSW53X
-       Aachen Imperial FastSim Scan CMSSM
+       Aachen Imperial FastSim FullSim Scan CMSSM
        Pythia Madgraph MCatNLO Alpgen Herwig Powheg
        TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic
        LM0 LM1 LM2 LM3 LM4 LM5 LM6 LM7 LM8 LM9 LM9p LM9t175 LM10 LM11 LM12 LM13 LM2mhfeq360 SimplifiedModel
