update of stuff

--- a/Analyzers/baseTreesNoTaus70X.ini
+++ b/Analyzers/baseTreesNoTaus70X.ini
@@ -6,5 +6,6 @@ electrons = "<taskname>basicElectronsPAT"
 muons = "<taskname>basicMuonsPAT"
 #taus = "<taskname>HpsTausAC"
 jets = "<taskname>qualityJets"
+jets2 = "<taskname>qualityJetsAK4"
 bJets = "<taskname>qualityBJets"
 vertices = "<taskname>basicVertices"
