--- a/CfgMerge/mergeData2012.ini
+++ b/CfgMerge/mergeData2012.ini
@@ -2,7 +2,7 @@
 tasks = cutsV23Dilepton
 basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer11
-outPath = processedTrees_Unblinded
+outPath = processedTrees
 counterSum = True
 
 [dileptonTree:cutsV23Dilepton]
