--- a/CfgMerge/mergeSimulation.ini
+++ b/CfgMerge/mergeSimulation.ini
@@ -1,6 +1,6 @@
 [general]
-tasks = cutsV23DileptonTrigger
-basePath = /user/jschulte/CleaningMC/
+tasks = cutsV23Dilepton
+basePath = /user/jschulte/CleaningMC2/
 MCDatasets = .*_Summer12
 counterSum = True
 outPath = processedTrees_Simulation
