--- a/CfgMerge/mergeData2012Exlcude16JanReReco.ini
+++ b/CfgMerge/mergeData2012Exlcude16JanReReco.ini
@@ -1,11 +1,11 @@
 [general]
 tasks = cutsV23Dilepton
-basePath = /user/jschulte/Cleaning16Jan
+basePath = /user/jschulte/Cleaning
 MCDatasets = .*_Summer11
 outPath = processedTrees_Unblinded
 counterSum = True
 
-[dileptonTree:cutsV22Dilepton]
+[dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
@@ -28,17 +28,17 @@ OtherSelection =
 # remove ID selection for overlap checking
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelectorOS]
-type = SimpleSelector
-EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207833 || runNr > 208307)
-EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207833 || runNr > 208307)
-MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207833 || runNr > 208307)
+type = SimpleSelector																			
+EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207883 || runNr > 208307)
+EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207883 || runNr > 208307)
+MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && (runNr < 207883 || runNr > 208307)
 
 
 [treeProcessor:highPtSelectorSS]
 type = SimpleSelector
-EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207833 || runNr > 208307)
-EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207833 || runNr > 208307)
-MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207833 || runNr > 208307)
+EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207883 || runNr > 208307)
+EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207883 || runNr > 208307)
+MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && (runNr < 207883 || runNr > 208307)
 
 
 [treeProcessor:overlapHighPt]
