--- a/Input/Master53X.ini
+++ b/Input/Master53X.ini
@@ -1280,7 +1280,7 @@ numevents = 20000
 kfactor = 1.
 localevents = 20000
 groups = MC CMSSW53X at8TeV PL1V1203c Aachen SUSY Summer12 SimplifiedModel FullSim
-crosssection = 36.8
+crosssection = 0.831
 datasetpath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
 localdbspath = /SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FullSim_Dilepton_Edge_BR_10_m_n_1_200_m_b_350_m_n_2_250_8TeV_Scan-9ada9ad64c5d6bb1e74c47b37cc44395/USER
 
@@ -1405,6 +1405,26 @@ crosssection = 0.368
 datasetpath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
 localdbspath = /SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan/cschomak-SUSY_SimplifiedModel_Madgraph_FastSim_Dilepton_Edge_BR_50_m_n_1_330_m_b_500_m_n_2_400_8TeV_Scan-746b8d26d565d559b22366cf81dc1131/USER
 
+[SUSY_Simplified_Model_Madgraph_FastSim_Dilepton_Edge_m_n_200_m_b_350_BR_10_8TeV]
+crosssection = 0.831
+kfactor = 1.
+
+
+[SUSY_Simplified_Model_Madgraph_FastSim_T6bblledge_225_150_80_8TeV]
+crosssection = 10.1
+kfactor = 1.
+[SUSY_Simplified_Model_Madgraph_FastSim_T6bblledge_350_275_205_8TeV]
+crosssection = 0.831
+kfactor = 1.
+[SUSY_Simplified_Model_Madgraph_FastSim_T6bblledge_400_150_80_8TeV]
+crosssection = 0.368
+kfactor = 1.
+[SUSY_Simplified_Model_Madgraph_FastSim_T6bbedge_350_275_205_8TeV]
+crosssection = 0.831
+kfactor = 1.
+[SUSY_Simplified_Model_Madgraph_FastSim_T6bbedge_400_150_80_8TeV]
+crosssection = 0.368
+kfactor = 1.
 #---- Test
 [Data_Run2012A]
 status = CREATED
