--- a/Input/default70X_OntheFlyMC.ini
+++ b/Input/default70X_OntheFlyMC.ini
@@ -1,13 +1,15 @@
 [general]
 
-additionalProducers = SUSYPATmc rho2011Producer EventCountProducer
+#~ additionalProducers = SUSYPATmc rho2011Producer EventCountProducer
+additionalProducers = SUSYPATmcSignal PdfWeights rho2011Producer EventCountProducer
 
 [crab]
-CMSSW.total_number_of_lumis = -1
-CMSSW.lumis_per_job = 25
-nEventsPerJob = 50000
+total_number_of_lumis = -1
+lumis_per_job = 5
+nEventsPerJob = 20000
 
-[62X]
+#~ [62X]
+[70X]
 
-globalTag = START71_V7::All
+globalTag = PRE_LS172_V15::All
 master_list = <general|InputPath>/Master70X.ini
