--- a/CfgMerge/mergeSimulation.ini
+++ b/CfgMerge/mergeSimulation.ini
@@ -1,9 +1,9 @@
 [general]
 tasks = cutsV23Dilepton
-basePath = /user/jschulte/CleaningMC2/
+basePath = /user/jschulte/CleaningMC/
 MCDatasets = .*_Summer12
 counterSum = True
-outPath = processedTrees_Simulation
+outPath = processedTrees_SimulationFixedMotherId
 
 [dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
@@ -11,3 +11,16 @@ EEDataset = .*
 EMuDataset = .*
 MuMuDataset = .*
 OtherSelection = 
+
+[treeProcessor:highPtSelectorOS]
+type = SimpleSelector
+EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && id1 < 0.15 && id2 < 0.15
+EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && id1 < 0.15 && id2 < 0.15
+MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==-1 && id1 < 0.15 && id2 < 0.15
+
+
+[treeProcessor:highPtSelectorSS]
+type = SimpleSelector
+EEExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && id1 < 0.15 && id2 < 0.15
+EMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && id1 < 0.15 && id2 < 0.15
+MuMuExpression = (pt1 > 20 && pt2 > 10 || pt1 > 10 && pt2 > 20) && chargeProduct==1 && id1 < 0.15 && id2 < 0.15
