--- a/CfgMerge/mergeSimulation2013Signal.ini
+++ b/CfgMerge/mergeSimulation2013Signal.ini
@@ -1,9 +1,9 @@
 [general]
-tasks = cutsV23Dilepton
-basePath = /user/jschulte/CleaningMC/
-MCDatasets = .*_Summer12
+tasks = cutsV23DileptonTriggerSignal
+basePath = /user/jschulte/CleaningMCSignal
+MCDatasets = .*_8TeV
 counterSum = True
-outPath = processedTrees_SimulationFixedMotherID
+outPath = processedTrees
 
 [dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
