--- a/CfgMerge/mergeSimulationFall13.ini
+++ b/CfgMerge/mergeSimulationFall13.ini
@@ -1,9 +1,9 @@
 [general]
-tasks = cutsV23Dilepton
+tasks = cutsV23DileptonTrigger
 basePath = /user/jschulte/CleaningMC/
-MCDatasets = .*_Summer12
+MCDatasets = .*_Fall13
 counterSum = True
-outPath = processedTrees_SimulationFixedMotherID
+outPath = processedTrees_Simulation
 
 [dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
