--- a/CfgMerge/mergeSimulationFall13Reweighted.ini
+++ b/CfgMerge/mergeSimulationFall13Reweighted.ini
@@ -1,9 +1,9 @@
 [general]
-tasks = cutsV23Dilepton
-basePath = /user/jschulte/CleaningMC/
-MCDatasets = .*_Summer12
+tasks = cutsV23DileptonTriggerReweighted
+basePath = /user/jschulte/CleaningMC2/
+MCDatasets = .*_Fall13
 counterSum = True
-outPath = processedTrees_SimulationFixedMotherID
+outPath = processedTrees_Simulation
 
 [dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
