--- a/Input/Master53XOnTheFly.ini
+++ b/Input/Master53XOnTheFly.ini
@@ -1038,6 +1038,50 @@ crosssection =
 datasetpath = /HTMHTParked/Run2012D-22Jan2013-v1/AOD
 localdbspath = /HTMHTParked/Run2012D-22Jan2013-v1/AOD
 
+
+
+#### For alphaT triggers: 
+
+[MET_Run2012A_22Jan]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 0
+groups = Data CMSSW53X at8TeV PL1V1203c Aachen MET Run2012A Jan22
+crosssection = 
+datasetpath = /MET/Run2012A-22Jan2013-v1/AOD
+localdbspath = /MET/Run2012A-22Jan2013-v1/AOD
+
+[MET_Run2012B_22Jan]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 0
+groups = Data CMSSW53X at8TeV PL1V1203c Aachen MET Run2012B Jan22
+crosssection = 
+datasetpath = /MET/Run2012B-22Jan2013-v1/AOD
+localdbspath = /MET/Run2012B-22Jan2013-v1/AOD
+
+[MET_Run2012C_22Jan]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 0
+groups = Data CMSSW53X at8TeV PL1V1203c Aachen MET Run2012C Jan22
+crosssection = 
+datasetpath = /MET/Run2012C-22Jan2013-v1/AOD
+localdbspath = /MET/Run2012C-22Jan2013-v1/AOD
+
+[MET_Run2012D_22Jan]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 0
+groups = Data CMSSW53X at8TeV PL1V1203c Aachen MET Run2012D Jan22
+crosssection = 
+datasetpath = /METParked/Run2012D-22Jan2013-v1/AOD
+localdbspath = /METParked/Run2012D-22Jan2013-v1/AOD
+
 #---- Summer12 MC
 
 [ZJets_madgraph_Summer12]
