--- a/Input/default53X_OntheFlyMCSignalEdge.ini
+++ b/Input/default53X_OntheFlyMCSignalEdge.ini
@@ -1,6 +1,6 @@
 [general]
 
-additionalProducers = SUSYPATmcSignal PdfWeights rho2011Producer EventCountProducer
+additionalProducers = SUSYPATmcSignal rho2011Producer EventCountProducer
 
 [crab]
 CMSSW.total_number_of_lumis = -1
@@ -11,4 +11,4 @@ nEventsPerJob = 20000
 
 dbsurl = phys03
 globalTag = START53_V27::All
-master_list = <general|InputPath>/Master53XOnTheFly.ini
+master_list = <general|InputPath>/MasterSimplifiedModelEdge.ini
