--- a/Analyzers/electronIsoTree.ini
+++ b/Analyzers/electronIsoTree.ini
@@ -3,7 +3,7 @@ type = GenericAnalyzer
 path = SuSyAachen.TagAndProbeTreeWriter.electronisotreewriter_cfi
 module = electronisotreewriter
 
-src = "<taskname>basicElectronsPAT"
+src = "<taskname>d0Electrons"
 jets = "<taskname>baseJets"
 met = "<taskname>BaseMET"
 vertices = "<taskname>basicVertices"
