--- a/CfgMerge/mergeSimulationFall13Trigger.ini
+++ b/CfgMerge/mergeSimulationFall13Trigger.ini
@@ -1,13 +1,16 @@
 [general]
-tasks = cutsV23Dilepton
+tasks = cutsV23DileptonTrigger
 basePath = /user/jschulte/CleaningMC/
-MCDatasets = .*_Summer12
+MCDatasets = .*_Fall13
 counterSum = True
-outPath = processedTrees_SimulationFixedMotherID
+outPath = processedTrees_Trigger
 
 [dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
 EEDataset = .*
 EMuDataset = .*
 MuMuDataset = .*
+EESelection = HLTDiEle
+EMuSelection = HLTMuEG
+MuMuSelection = HLTDiMu
 OtherSelection = 
