commit for merge

--- a/Input/Master53X.ini
+++ b/Input/Master53X.ini
@@ -883,7 +883,7 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJets Madgraph Summer12
-crosssection = 22.4
+crosssection = 23.526
 datasetpath =  /TTJets_FullLeptMGDecays_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7C-v2/AODSIM
 localdbspath =  /TTJets_FullLeptMGDecays_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7C-v2/AODSIM
 
@@ -893,7 +893,7 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJets Madgraph Summer12
-crosssection = 88.6 
+crosssection = 98.55
 datasetpath =  /TTJets_SemiLeptMGDecays_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7C-v1/AODSIM
 localdbspath =  /TTJets_SemiLeptMGDecays_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7C-v1/AODSIM
 
@@ -903,7 +903,7 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJets Madgraph Summer12
-crosssection = 88.8
+crosssection = 102.825
 datasetpath =  /TTJets_HadronicMGDecays_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A_ext-v1/AODSIM
 localdbspath =  /TTJets_HadronicMGDecays_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A_ext-v1/AODSIM
 
@@ -1010,7 +1010,7 @@ numevents = 71598
 kfactor = 1.
 localevents = 71598
 groups = MC CMSSW53X at8TeV PL1V1203c Aachen Rare Madgraph Summer12
-crosssection = 2.166
+crosssection = 2.4
 datasetpath = /TTGJets_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 localdbspath = /TTGJets_8TeV-madgraph/jschulte-TTGJets_madgraph_Summer12_SUSYAC_V1203cv3-9fe8f30f11ea3ca237dfe6983b30b705/USER
 
@@ -1031,7 +1031,7 @@ numevents = 215121
 kfactor = 1.
 localevents = 215121
 groups = MC CMSSW53X at8TeV PL1V1203c Aachen Rare Madgraph Summer12
-crosssection = 0.528
+crosssection = 0.090
 datasetpath = /WWGJets_8TeV-madgraph/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
 localdbspath = /WWGJets_8TeV-madgraph/jschulte-WWGJets_madgraph_Summer12_SUSYAC_V1203cv4-9fe8f30f11ea3ca237dfe6983b30b705/USER
 
@@ -1261,3 +1261,80 @@ crosssection = -10816
 datasetpath = 
 localdbspath = 
 
+[TTJets_matchingup_madgraph_Summer12_v1]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 9218462
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJetsSyst Madgraph Summer12 v1
+crosssection = 227
+datasetpath = /TTJets_matchingup_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53 V7A-v1/AODSIM
+localdbspath = /TTJets_matchingup_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+
+[TTJets_matchingdown_madgraph_Summer12_v1]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 9218462
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJetsSyst Madgraph Summer12 v1
+crosssection = 227
+datasetpath = /TTJets_matchingdown_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53 V7A-v1/AODSIM
+localdbspath = /TTJets_matchingdown_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+
+[TTJets_scaleup_madgraph_Summer12_v1]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 9218462
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJetsSyst Madgraph Summer12 v1
+crosssection = 227
+datasetpath = /TTJets_scaleup_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53 V7A-v1/AODSIM
+localdbspath = /TTJets_scaleup_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+
+[TTJets_scaledown_madgraph_Summer12_v1]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 9218462
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJetsSyst Madgraph Summer12 v1
+crosssection = 227
+datasetpath = /TTJets_scaledown_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53 V7A-v1/AODSIM
+localdbspath = /TTJets_scaledown_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+
+[TTJets_mass166_5_madgraph_Summer12_v1]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 9218462
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJetsSyst Madgraph Summer12 v1
+crosssection = 227
+datasetpath = /TTJets_mass166_5_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53 V7A-v1/AODSIM
+localdbspath = /TTJets_mass166_5_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+[TTJets_mass178_5_madgraph_Summer12_v1]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 9218462
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJetsSyst Madgraph Summer12 v1
+crosssection = 227
+datasetpath = /TTJets_mass178_5_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53 V7A-v1/AODSIM
+localdbspath = /TTJets_mass178_5_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+[TTJets_mass175_5_madgraph_Summer12_v1]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 9218462
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJetsSyst Madgraph Summer12 v1
+crosssection = 227
+datasetpath = /TTJets_mass175_5_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53 V7A-v1/AODSIM
+localdbspath = /TTJets_mass175_5_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
+
+[TTJets_mass169_5_madgraph_Summer12_v1]
+status = CREATED
+numevents = 0
+kfactor = 1.
+localevents = 9218462
+groups = MC CMSSW53X at8TeV PL1V1203c Aachen TTJetsSyst Madgraph Summer12 v1
+crosssection = 227
+datasetpath = /TTJets_mass169_5_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53 V7A-v1/AODSIM
+localdbspath = /TTJets_mass169_5_TuneZ2star_8TeV-madgraph-tauola/Summer12_DR53X-PU_S10_START53_V7A-v1/AODSIM
