changes for miniAOD studies

--- a/Input/default70X.ini
+++ b/Input/default70X.ini
@@ -2,7 +2,7 @@
 InputPath = Input/
 OutputPath = /user/schomakers/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
-#~ SitePath = /pnfs/physik.rwth-aachen.de/cms/store/user
+SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
 StatusPath = status/
 InputTagCollection = standardRECO
@@ -18,15 +18,15 @@ additionalProducers = EventCountProducer
 
 
 groups = StandardModel SUSY
-       Spring14
+       Spring14 Phys14
        PL1V1010a PL1V1010b PL1V1013a PL1V1015a PL1V1015b PL1V1200a PL1V1203b PL1V1203c
        CMSSW70X
        Aachen Imperial FastSim Scan CMSSM
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg
-       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic
+       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ
        at13TeV
        SingleElectron DoubleElectron SingleMu DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
-       Data MC AOD RelVal
+       Data MC AOD RelVal MiniAOD
 
 [crab]
 StageoutSite = T2_DE_RWTH
@@ -47,7 +47,7 @@ pubDBSURL = phys03
 #CMSSW.lumi_mask = /home/home4/institut_1b/jschulte/Doktorarbeit/Dilepton/SubmitScripts/Input/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
 
 # for normal running
-nEventsPerJob = 200000
+nEventsPerJob = 50000
 #nEventsPerJob = 50000
 # for weightSummer
 #nEventsPerJob = 2000000
@@ -77,7 +77,8 @@ makeMETUncertainties = False
 monteCarloAvailable = True
 localdatapath = /user/$USER/LocalInput
 #~ globalTag =  START71_V7::All
-globalTag =  PRE_LS172_V15::All
+#~ globalTag =  PRE_LS172_V15::All
+globalTag =  PHYS14_25_V2::All
 skimcfgname = templates/62Data/SusyPAT_dataJul13ReReco_cfg.py
 skimFromLocalDBS = False
 logname = skimming_
@@ -93,10 +94,11 @@ skimlogpath = <general|OutputPath>/LOG/skimming/skim53X
 datapath = <general|SitePath>/$USER/data/skimOctober09
 analogpath = <general|OutputPath>/LOG/analysis
 #~ dbsurl = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
-#~ dbsurl = phys03
-dbsurl = global
+#~ inputDBS = phys03
+inputDBS = global
 storagepath = <general|SitePath>/cschomak
 histogramstoragepath = <general|SitePath>/cschomak/data/Histos
+histogramoutputpath = <general|SiteOutputPath>/cschomak/data/Histos
 cmsstoragepath = <general|SitePath>
 famospath = /home/home4/institut_1b/nmohr/famos/223
 famosdatapath = <general|SitePath>
