--- a/Input/default70X_OntheFlyMC.ini
+++ b/Input/default70X_OntheFlyMC.ini
@@ -1,15 +1,15 @@
 [general]
 
-#~ additionalProducers = SUSYPATmc rho2011Producer EventCountProducer
-additionalProducers = SUSYPATmcSignal PdfWeights rho2011Producer EventCountProducer
+additionalProducers = SUSYPATmc rho2011Producer EventCountProducer
+#~ additionalProducers = SUSYPATmcSignal PdfWeights rho2011Producer EventCountProducer
 
 [crab]
 total_number_of_lumis = -1
-lumis_per_job = 5
+lumis_per_job = 4
 nEventsPerJob = 20000
 
 #~ [62X]
 [70X]
 
-globalTag = PRE_LS172_V15::All
+globalTag = PHYS14_25_V2::All
 master_list = <general|InputPath>/Master70X.ini
